disabled the number/percentage filter on the fct maps, added algorithm that plots district/province/country bubbles according to size to minimize overlap, added helper methods for lat/lng coordinate offset, added proof of concept polygon highlight on mouseover/mouseout, added both dsr and fct location name toggle, updated polygon color/fillColor, tweaked initial map zoom to check for a surface area of the base layer to determine whether to use a default view or use a dynamic fit around the base layer bounds, fixed an error happening when the fosa id or dhsst location code doesn't conform to the expected numerical pattern

--- a/src/stylesheets/partials/_nav-table.sass
+++ b/src/stylesheets/partials/_nav-table.sass
@@ -186,9 +186,9 @@
     font-size: 15px
     opacity: 0.75
   .report-value-marker-na
-    font-size: 10px
+    font-size: 12px
     color: darkgray
-    opacity: 0.5
+    //opacity: 0.5
 
   .indicator-best
     color: $best
