--- a/web-app/css/screen.css
+++ b/web-app/css/screen.css
@@ -1391,7 +1391,7 @@ textarea.login-field { width: 400px; height: 50px; text-align: left; }
 /* line 185, ../../src/stylesheets/partials/_nav-table.sass */
 .map .report-value-marker-string, .map .report-value-marker-text { font-size: 15px; opacity: 0.75; }
 /* line 188, ../../src/stylesheets/partials/_nav-table.sass */
-.map .report-value-marker-na { font-size: 10px; color: darkgrey; opacity: 0.5; }
+.map .report-value-marker-na { font-size: 12px; color: darkgrey; }
 /* line 193, ../../src/stylesheets/partials/_nav-table.sass */
 .map .indicator-best { color: #4daf4a; }
 /* line 195, ../../src/stylesheets/partials/_nav-table.sass */
